Performance improvement in FFM